UCDetector 1.5.0 from 2010-:
Bugfixes:
 - [ 2922801 ] Quick fix exception on enum declaration 
 

New features:
 - [ 2929828 ] Added filter to exclude classes extending/implementing
 - [ 2923567 ] Do not report markers for deprecated class members
               TODO: Ignore all children for a class
 - Added cycle detection again, improved cycle view
 - text report
 - Detection modes
 - better preferences