@@ -139,8 +139,15 @@ class VisibilityHandler {
       if (method.isMainMethod()) {
         return false;
       }
+      // Bug [ 2269486 ] Constants in Interfaces Can't be Private
       if (JavaElementUtil.isInterfaceMethod(method)) {
-        // fix bug [ 2269486 ] Constants in Interfaces Can't be Private
+        return false;
+      }
+      // TODO Bug [ 2968753] protected abstract method cannot be made private
+      // TODO: review all references from JavaElementUtil.isInterfaceMethod(method)
+      // TODO: review all marker creation of methods, check for isAbstract()
+      // TODO: review Bug2968753
+      if (Flags.isAbstract(method.getFlags())) {
         return false;
       }
     }
