@@ -1,6 +1,7 @@
 UCDetector 1.5.0 from 2010-:
 Bugfixes:
  - [ 2922801 ] Quick fix exception on enum declaration 
+ - [ 2968753] protected abstract method cannot be made private
  
 
 New features:
